# src/main/java/com/fiap/bytesquad/notaqui/model/dto/response/OCRResponseDTO.java
@@ -1,6 +1,7 @@
 package com.fiap.bytesquad.notaqui.model.dto.response;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fiap.bytesquad.notaqui.model.dto.response.cnpja.CNPJResponseDTO;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -8,6 +9,7 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 import java.io.Serializable;
+import java.math.BigDecimal;
 
 @Builder
 @Getter
@@ -17,6 +19,9 @@ import java.io.Serializable;
 public class OCRResponseDTO implements Serializable {
     private static final long serialVersionUID = -1L;
 
-    @JsonProperty("conteudo")
-    private String content;
+    @JsonProperty("valor")
+    private BigDecimal value;
+
+    @JsonProperty("infoPj")
+    private CNPJResponseDTO cnpjResponseDTO;
 }
